# QuickSync4Linux

./: .gitignore  README.md  at.py  obex.py  pyproject.toml  quicksync.py  quicksync4linux.desktop
QuickSync4Linux/: __init__.py  __main__.py  quicksync.py
src/QuickSync4Linux/: quicksync.py
